packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__should_output_utils_outside_of_components_in_a_separate_segment.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 272
expression: output
---
==INPUT==


import { component$, useSignal, useTask$, useVisibleTask$, useComputed$ } from '@qwik.dev/core';
import { Child } from './child';
import { ConditionalChild } from './conditional-child';
import { relativeHelper } from './helpers-only-path';
import { parentHelper } from './parent-path-with-component';
import { aliasHelper } from '@alias/path';

export const testLogger = () => {
  console.log("testLogger");
};

export const TestButton = component$(() => {
	testLogger();
	const counter = useSignal(0);

	useTask$(() => {
		console.log("log 1:", testLogger());
		relativeHelper();
		parentHelper();
		aliasHelper();
	});

	useTask$(() => {
		console.log("log 2:", testLogger());
		relativeHelper();
		parentHelper();
		aliasHelper();
	});

	useVisibleTask$(() => {
		console.log("log 3:", testLogger());
	});

	const doubleCounter = useComputed$(() => counter.value * 2);

	return (
		<>
			<button
				onClick$={() => {
					testLogger();
					counter.value++;
				}}
			>
				Increment signal: {counter.value}
			</button>
			<button
				onClick$={() => {
					testLogger();
					doubleCounter.value++;
				}}
			>
				Increment computed: {doubleCounter.value}
			</button>
			<Child />
			{counter.value > 0 && <ConditionalChild />}
		</>
	);
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_uFrpfTnm3bA = ()=>import("./test.tsx_TestButton_component_uFrpfTnm3bA");
export const testLogger = ()=>{
    console.log("testLogger");
};
export const TestButton = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_uFrpfTnm3bA, "TestButton_component_uFrpfTnm3bA"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;AAQA,OAAO,MAAM,aAAa;IACxB,QAAQ,GAAG,CAAC;AACd,EAAE;AAEF,OAAO,MAAM,2BAAa,mFA8CvB\"}")
============================= test.tsx_TestButton_component_useTask_K6S9SSHyiUc.js (ENTRY POINT)==

import { aliasHelper } from "@alias/path";
import { parentHelper } from "./parent-path-with-component";
import { relativeHelper } from "./helpers-only-path";
import { testLogger } from "./test";
export const TestButton_component_useTask_K6S9SSHyiUc = ()=>{
    console.log("log 1:", testLogger());
    relativeHelper();
    parentHelper();
    aliasHelper();
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;wDAgBU;IACR,QAAQ,GAAG,CAAC,UAAU;IACtB;IACA;IACA;AACD\"}")
/*
{
  "origin": "test.tsx",
  "name": "TestButton_component_useTask_K6S9SSHyiUc",
  "entry": null,
  "displayName": "test.tsx_TestButton_component_useTask",
  "hash": "K6S9SSHyiUc",
  "canonicalFilename": "test.tsx_TestButton_component_useTask_K6S9SSHyiUc",
  "path": "",
  "extension": "js",
  "parent": "TestButton_component_uFrpfTnm3bA",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": false,
  "loc": [
    516,
    620
  ]
}
*/
============================= test.tsx_TestButton_component_useTask_1_rqfZ500hckk.js (ENTRY POINT)==

import { aliasHelper } from "@alias/path";
import { parentHelper } from "./parent-path-with-component";
import { relativeHelper } from "./helpers-only-path";
import { testLogger } from "./test";
export const TestButton_component_useTask_1_rqfZ500hckk = ()=>{
    console.log("log 2:", testLogger());
    relativeHelper();
    parentHelper();
    aliasHelper();
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;0DAuBU;IACR,QAAQ,GAAG,CAAC,UAAU;IACtB;IACA;IACA;AACD\"}")
/*
{
  "origin": "test.tsx",
  "name": "TestButton_component_useTask_1_rqfZ500hckk",
  "entry": null,
  "displayName": "test.tsx_TestButton_component_useTask_1",
  "hash": "rqfZ500hckk",
  "canonicalFilename": "test.tsx_TestButton_component_useTask_1_rqfZ500hckk",
  "path": "",
  "extension": "js",
  "parent": "TestButton_component_uFrpfTnm3bA",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": false,
  "loc": [
    634,
    738
  ]
}
*/
============================= test.tsx_TestButton_component_doubleCounter_useComputed_Oyaa3Pi3NU8.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const TestButton_component_doubleCounter_useComputed_Oyaa3Pi3NU8 = ()=>{
    const [counter] = useLexicalScope();
    return counter.value * 2;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";0EAkCoC;;WAAM,QAAQ,KAAK,GAAG\"}")
/*
{
  "origin": "test.tsx",
  "name": "TestButton_component_doubleCounter_useComputed_Oyaa3Pi3NU8",
  "entry": null,
  "displayName": "test.tsx_TestButton_component_doubleCounter_useComputed",
  "hash": "Oyaa3Pi3NU8",
  "canonicalFilename": "test.tsx_TestButton_component_doubleCounter_useComputed_Oyaa3Pi3NU8",
  "path": "",
  "extension": "js",
  "parent": "TestButton_component_uFrpfTnm3bA",
  "ctxKind": "function",
  "ctxName": "useComputed$",
  "captures": true,
  "loc": [
    848,
    871
  ],
  "captureNames": [
    "counter"
  ]
}
*/
============================= test.tsx_TestButton_component_Fragment_button_on_click_telk8t1ZG1w.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
import { testLogger } from "./test";
export const TestButton_component_Fragment_button_on_click_telk8t1ZG1w = ()=>{
    const [counter] = useLexicalScope();
    testLogger();
    counter.value++;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;yEAuCc;;IACT;IACA,QAAQ,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "TestButton_component_Fragment_button_on_click_telk8t1ZG1w",
  "entry": null,
  "displayName": "test.tsx_TestButton_component_Fragment_button_on_click",
  "hash": "telk8t1ZG1w",
  "canonicalFilename": "test.tsx_TestButton_component_Fragment_button_on_click_telk8t1ZG1w",
  "path": "",
  "extension": "js",
  "parent": "TestButton_component_uFrpfTnm3bA",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    915,
    969
  ],
  "captureNames": [
    "counter"
  ]
}
*/
============================= test.tsx_TestButton_component_Fragment_button_on_click_1_eJ3G7aV3AXI.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
import { testLogger } from "./test";
export const TestButton_component_Fragment_button_on_click_1_eJ3G7aV3AXI = ()=>{
    const [doubleCounter] = useLexicalScope();
    testLogger();
    doubleCounter.value++;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;2EA+Cc;;IACT;IACA,cAAc,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "TestButton_component_Fragment_button_on_click_1_eJ3G7aV3AXI",
  "entry": null,
  "displayName": "test.tsx_TestButton_component_Fragment_button_on_click_1",
  "hash": "eJ3G7aV3AXI",
  "canonicalFilename": "test.tsx_TestButton_component_Fragment_button_on_click_1_eJ3G7aV3AXI",
  "path": "",
  "extension": "js",
  "parent": "TestButton_component_uFrpfTnm3bA",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    1052,
    1112
  ],
  "captureNames": [
    "doubleCounter"
  ]
}
*/
============================= test.tsx_TestButton_component_uFrpfTnm3bA.js (ENTRY POINT)==

import { Child } from "./child";
import { ConditionalChild } from "./conditional-child";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { testLogger } from "./test";
import { useComputedQrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
import { useVisibleTaskQrl } from "@qwik.dev/core";
const i_DHnqAQBxHLQ = ()=>import("./test.tsx_TestButton_component_useVisibleTask_DHnqAQBxHLQ");
const i_K6S9SSHyiUc = ()=>import("./test.tsx_TestButton_component_useTask_K6S9SSHyiUc");
const i_Oyaa3Pi3NU8 = ()=>import("./test.tsx_TestButton_component_doubleCounter_useComputed_Oyaa3Pi3NU8");
const i_eJ3G7aV3AXI = ()=>import("./test.tsx_TestButton_component_Fragment_button_on_click_1_eJ3G7aV3AXI");
const i_rqfZ500hckk = ()=>import("./test.tsx_TestButton_component_useTask_1_rqfZ500hckk");
const i_telk8t1ZG1w = ()=>import("./test.tsx_TestButton_component_Fragment_button_on_click_telk8t1ZG1w");
export const TestButton_component_uFrpfTnm3bA = ()=>{
    testLogger();
    const counter = useSignal(0);
    useTaskQrl(/*#__PURE__*/ qrl(i_K6S9SSHyiUc, "TestButton_component_useTask_K6S9SSHyiUc"));
    useTaskQrl(/*#__PURE__*/ qrl(i_rqfZ500hckk, "TestButton_component_useTask_1_rqfZ500hckk"));
    useVisibleTaskQrl(/*#__PURE__*/ qrl(i_DHnqAQBxHLQ, "TestButton_component_useVisibleTask_DHnqAQBxHLQ"));
    const doubleCounter = useComputedQrl(/*#__PURE__*/ qrl(i_Oyaa3Pi3NU8, "TestButton_component_doubleCounter_useComputed_Oyaa3Pi3NU8", [
        counter
    ]));
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSorted("button", null, {
            "on:click": /*#__PURE__*/ qrl(i_telk8t1ZG1w, "TestButton_component_Fragment_button_on_click_telk8t1ZG1w", [
                counter
            ])
        }, [
            "Increment signal: ",
            _wrapProp(counter)
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("button", null, {
            "on:click": /*#__PURE__*/ qrl(i_eJ3G7aV3AXI, "TestButton_component_Fragment_button_on_click_1_eJ3G7aV3AXI", [
                doubleCounter
            ])
        }, [
            "Increment computed: ",
            _wrapProp(doubleCounter)
        ], 3, null),
        /*#__PURE__*/ _jsxSorted(Child, null, null, null, 3, "u6_0"),
        counter.value > 0 && /*#__PURE__*/ _jsxSorted(ConditionalChild, null, null, null, 3, "u6_1")
    ], 1, "u6_2");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;;;;;;;;;gDAYqC;IACpC;IACA,MAAM,UAAU,UAAU;IAE1B;IAOA;IAOA;IAIA,MAAM,gBAAgB;;;IAEtB,qBACC;sBACC,WAAC;YACA,UAAQ;;;;YAIR;sBACmB;;sBAEpB,WAAC;YACA,UAAQ;;;;YAIR;sBACqB;;sBAEtB,WAAC;QACA,QAAQ,KAAK,GAAG,mBAAK,WAAC;;AAG1B\"}")
/*
{
  "origin": "test.tsx",
  "name": "TestButton_component_uFrpfTnm3bA",
  "entry": null,
  "displayName": "test.tsx_TestButton_component",
  "hash": "uFrpfTnm3bA",
  "canonicalFilename": "test.tsx_TestButton_component_uFrpfTnm3bA",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    451,
    1249
  ]
}
*/
============================= test.tsx_TestButton_component_useVisibleTask_DHnqAQBxHLQ.js (ENTRY POINT)==

import { testLogger } from "./test";
export const TestButton_component_useVisibleTask_DHnqAQBxHLQ = ()=>{
    console.log("log 3:", testLogger());
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";+DA8BiB;IACf,QAAQ,GAAG,CAAC,UAAU;AACvB\"}")
/*
{
  "origin": "test.tsx",
  "name": "TestButton_component_useVisibleTask_DHnqAQBxHLQ",
  "entry": null,
  "displayName": "test.tsx_TestButton_component_useVisibleTask",
  "hash": "DHnqAQBxHLQ",
  "canonicalFilename": "test.tsx_TestButton_component_useVisibleTask_DHnqAQBxHLQ",
  "path": "",
  "extension": "js",
  "parent": "TestButton_component_uFrpfTnm3bA",
  "ctxKind": "function",
  "ctxName": "useVisibleTask$",
  "captures": false,
  "loc": [
    759,
    808
  ]
}
*/
== DIAGNOSTICS ==

[]
