packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__should_transform_event_names_without_jsx_transpile.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, $ } from '@qwik.dev/core';
import mongo from 'mongodb';

export const Greeter = component$(() => {
	// Double count watch
	useTask$(async () => {
		await mongo.users();
	});
	return (
		<div>
			<div onClick$={() => {}}/>
			<div onClick$={() => {}}/>
			<div onClick$={() => {}}/>
		</div>
	)
});


============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const _qrl_Greeter_component_n7HuG2hhU0Q = /*#__PURE__*/ qrl(()=>import("./test.tsx_Greeter_component_n7HuG2hhU0Q"), "Greeter_component_n7HuG2hhU0Q");
//
export const Greeter = /*#__PURE__*/ componentQrl(_qrl_Greeter_component_n7HuG2hhU0Q);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAIA,OAAO,MAAM,wBAAU,iDAYpB\"}")
============================= test.tsx_Greeter_component_n7HuG2hhU0Q.tsx (ENTRY POINT)==

import { _noopQrl } from "@qwik.dev/core";
import mongo from "mongodb";
//
const _qrl_Greeter_component_div_div_q_e_click_1_s7p0zjWZpqo = /*#__PURE__*/ _noopQrl("Greeter_component_div_div_q_e_click_1_s7p0zjWZpqo", true);
const _qrl_Greeter_component_div_div_q_e_click_2_B9tqzgApK9E = /*#__PURE__*/ _noopQrl("Greeter_component_div_div_q_e_click_2_B9tqzgApK9E", true);
const _qrl_Greeter_component_div_div_q_e_click_wYSPnQEGCbA = /*#__PURE__*/ _noopQrl("Greeter_component_div_div_q_e_click_wYSPnQEGCbA", true);
//
export const Greeter_component_n7HuG2hhU0Q = ()=>{
    // Double count watch
    useTask$(async ()=>{
        await mongo.users();
    });
    return <div>
			<div q-e:click={_qrl_Greeter_component_div_div_q_e_click_wYSPnQEGCbA}/>
			<div q-e:click={_qrl_Greeter_component_div_div_q_e_click_1_s7p0zjWZpqo}/>
			<div q-e:click={_qrl_Greeter_component_div_div_q_e_click_2_B9tqzgApK9E}/>
		</div>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;6CAIkC;IACjC,qBAAqB;IACrB,SAAS;QACR,MAAM,MAAM,KAAK;IAClB;IACA,QACE,IAAI;GACJ,CAAC,IAAI,kEAAqB;GAC1B,CAAC,IAAI,oEAAqB;GAC1B,CAAC,IAAI,oEAAqB;EAC3B,EAAE;AAEJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_n7HuG2hhU0Q",
  "entry": null,
  "displayName": "test.tsx_Greeter_component",
  "hash": "n7HuG2hhU0Q",
  "canonicalFilename": "test.tsx_Greeter_component_n7HuG2hhU0Q",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    114,
    318
  ]
}
*/
== DIAGNOSTICS ==

[]
